[package]
name = "line-runner"
version = "0.1.0"
authors = ["Julian Rosse <julian@helixbass.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
combine = "4.6.0"
midir = "0.7.0"
rand = "0.8.4"
strum = "0.21.0"
strum_macros = "0.21.1"
wmidi = "4.0.6"
