[package]
name = "line-runner"
version = "0.1.0"
authors = ["Julian Rosse <julian@helixbass.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bus = "2.2.3"
combine = "4.6.6"
midir = "0.7.0"
num-traits = "0.2.14"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
spin_sleep = "1.0.0"
strum = "0.21.0"
strum_macros = "0.21.1"
wmidi = "4.0.6"
